# llvm-project-ASP-regalloc

./: .gitmodules  CLINGO_INTEGRATION_GUIDE.md
ASP-PBQP-regalloc/: ex.txt  regalloc.lp  scholz_eckstein_instance.lp
llvm/: CMakeLists.txt
llvm/include/llvm/CodeGen/: PBQPComparison.h  RegAllocPBQP.h
llvm/lib/CodeGen/: CMakeLists.txt  PBQPComparison.cpp  RegAllocPBQP.cpp
llvm/test/CodeGen/Generic/: PBQP.ll.foo.0.pbqpgraph  PBQP.s
llvm/tools/: CMakeLists.txt
llvm/tools/clingo-test/: CMakeLists.txt  ClingoTest.cpp
